<resources>
    <string name="app_name">Tugas Binar Authentication</string>
    <string name="login_text">Login To Your Account</string>
    <string name="login_button_text">Login</string>
    <string name="email_hint">Masukan email anda</string>
    <string name="password_hint">Masukan password anda</string>
    <string name="forgot_password_hint">Forgot Password</string>
    <string name="register_hint">Register</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="change_passowrd">Ubah Password</string>
    <string name="lupa_password">Forgot Password</string>
    <string name="password_baru">Masukan Passoword Baru</string>
    <string name="ulang_password_baru">Ulang Password Baru</string>
</resources>