<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/black50"
        android:textColor="@color/black"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edt_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:layout_height="50dp"
        android:background="@drawable/background_edt_text"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/black50"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/background_edt_text"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/black50"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:background="@drawable/background_button"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>